# yeetos

./: .gitignore  kernel_cmdline.cfg  makefile  packages.txt
crates/boot_acpi/: Cargo.toml
crates/boot_acpi/src/: ap_startup.rs  handler.rs  lib.rs
crates/boot_acpi/src/asm/: trampoline_i686.asm
crates/boot_info/: Cargo.toml
crates/boot_info/src/: boot_logger_info.rs  kernel_image_info.rs  lib.rs
crates/boot_info/src/platform_info/: mod.rs  pc_x86.rs  uefi.rs
crates/boot_logger/: Cargo.toml
crates/boot_logger/src/: lib.rs
crates/bootinfo/: Cargo.toml
crates/bootinfo/src/: lib.rs
crates/initrd/: Cargo.toml
crates/initrd/src/: lib.rs
crates/kernel_cmdline/: Cargo.toml
crates/kernel_cmdline/src/: lib.rs  parser.rs
crates/kernel_graphics/: Cargo.toml
crates/kernel_graphics/src/: _unused_rgb_writer.rs  info.rs  lib.rs  rgb_frame_buffer.rs
crates/kernel_image/: Cargo.toml
crates/kernel_image/src/: kernel_image.rs  kernel_image_info.rs  lib.rs  new_kernel_image.rs
crates/kernel_logger/: Cargo.toml
crates/kernel_logger/src/: lib.rs  serial.rs  text_vga.rs
crates/memory/: Cargo.toml
crates/memory/src/: arch.rs  frame.rs  lib.rs  misc.rs  mmap.rs  paddr.rs  page.rs  prange.rs  reader.rs  vaddr.rs  vrange.rs
crates/memory/src/paging/: mod.rs  paging_i686.rs  paging_x64.rs  paging_x86_64.rs
crates/memory/src/phys/: frame.rs  mod.rs  paddr.rs  palloc.rs  prange.rs
crates/memory/src/virt/: mod.rs  page.rs  reader.rs  vaddr.rs  valloc.rs  vrange.rs
crates/multi_core/: Cargo.toml
crates/multi_core/src/: ap_startup.rs  cpuid_hack.rs  handler.rs
crates/multi_core/src/asm/: trampoline_i686.asm  trampoline_x86_64.asm
crates/serial/: Cargo.toml
crates/serial/src/: lib.rs
crates/vga/: Cargo.toml
crates/vga/src/: color.rs  lib.rs  port.rs  text_mode.rs  vga.rs
crates/vga/src/drawing/: mod.rs
crates/vga/src/registers/: attribute_controller.rs  color_palette.rs  crtc_controller.rs  general.rs  graphics_controller.rs  sequencer.rs
crates/vga/src/writers/: mod.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/linkers/: x86_64.ld
kernel/src/: ensure_image.rs  heap.rs  init_allocator.rs  kresult.rs  main.rs  mm.rs  panic_handler.rs
kernel/src/arch/: mod.rs
kernel/src/arch/i686/: asm.s  mm.rs  mod.rs
kernel/src/arch/i686/cpu/: exceptions.rs  features.rs  gdt.rs  idt.rs  local.rs  mod.rs
kernel/src/arch/i686/interrupts/: mod.rs
kernel/src/arch/i686/paging/: init.rs  mod.rs
kernel/src/arch/x86_64/: mm.rs  mod.rs  paging.rs
kernel/src/arch/x86_64/cpu/: exceptions.rs  features.rs  gdt.rs  idt.rs  local.rs  mod.rs  tss.rs
kernel/src/arch/x86_64/interrupts/: mod.rs
kernel/src/arch/x86_64/paging/: init.rs  mod.rs
kernel/src/memory/: mod.rs
kernel/src/memory/phys/: mod.rs
kernel/src/mm/: frame_bump_allocator.rs  frame_fixed_allocator.rs  frame_global_allocator.rs  init.rs  mod.rs  physical_memory_object.rs  virtual_bump_allocator.rs  virtual_global_allocator.rs
kernel/triplets/: i686-yeetos.json  x86_64-yeetos.json
loaders/multiboot2/: Cargo.toml  link.ld
loaders/multiboot2/.cargo/: config.toml
loaders/multiboot2/linkers/: i686.ld  x86_64.ld
loaders/multiboot2/src/: acpi.rs  ap_startup.s  ap_trampoline.s  boot.s  boot_info.rs  entry.rs  heap.rs  idt.rs  initrd.rs  kernel_image.rs  main.rs  mmap.rs  panic_handler.rs  panic_handling.rs  vga.rs
loaders/multiboot2/src/acpi/: acpi_handler.rs  ap_startup.rs  mod.rs
loaders/multiboot2/src/arch/: mod.rs
loaders/multiboot2/src/arch/i686/: ap_startup.s  boot.s  idt.rs  mmap.rs  mod.rs  paging.rs
loaders/multiboot2/src/arch/i686/asm/: ap_startup.s  boot.s
loaders/multiboot2/src/arch/x86_64/: ap_startup.s  boot.s  idt.rs  mod.rs  paging.rs
loaders/multiboot2/src/arch/x86_64/asm/: ap_startup.s  boot.s
loaders/multiboot2/src/asm/: boot.s
loaders/multiboot2/src/devices/: mod.rs  pic.rs  pit.rs  serial.rs  tsc.rs
loaders/multiboot2/src/multiboot2/: mod.rs  tag.rs  tag_info.rs  tag_iterator.rs  tags.rs
loaders/multiboot2/src/paging/: mod.rs
loaders/multiboot2/triplets/: i686-yeetos.json  x86_64-yeetos.json
loaders/uefi/: Cargo.toml
loaders/uefi/.cargo/: config.toml
loaders/uefi/src/: acpi.rs  boot_info.rs  bootfs.rs  entry.rs  heap.rs  initrd.rs  main.rs  mmap.rs  paging.rs  panic_handler.rs  time.rs
loaders/uefi/src/acpi/: acpi_handler.rs  ap_startup.rs  mod.rs
loaders/uefi/src/arch/x86_64/: ap_startup.s  entry.asm  mod.rs  paging.rs  time.rs
loaders/uefi/src/paging/: mod.rs
scripts/: mkimg.sh  mkinitrd.sh  mkiso.sh
