[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[dependencies]
spin = "0.9.8"

memory = { path = "../crates/memory" }
boot_info = { path = "../crates/boot_info" }

[target.'cfg(target_arch = "x86")'.dependencies]
x86 = "0.52.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52.0"
