[package]
name = "boot_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory = { path = "../memory" }
kernel_image = { path = "../kernel_image" }
kernel_graphics = { path = "../kernel_graphics" }

arrayvec = { version = "0.7.2", default-features = false }
