[package]
name = "boot_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin = "0.9.4"
arrayvec = { version = "0.7.2", default-features = false }

boot_info = { path = "../boot_info" }
