[package]
name = "kernel_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
spin = "0.9.8"

x86 = { version = "0.52.0", optional = true }

memory = { path = "../memory" }
vga = { path = "../vga" }

[features]
default = []
serial-log = ["x86"]
vga-log = []
