[package]
name = "kernel_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
spin = "0.9.8"

memory = { path = "../memory" }
serial = { path = "../serial", optional = true }

[features]
default = []
serial-log = ["serial"]
