[package]
name = "multi_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86 = "0.52.0"
log = "0.4.21"

acpi = { git = "https://github.com/rust-osdev/acpi.git" }

memory = { path = "../memory" }
kernel_image = { path = "../kernel_image" }
