[package]
name = "vga"
version = "0.2.9"
authors = ["Ryan Kennedy <rkennedy9064@gmail.com>"]
edition = "2018"
description = "Support for vga specific functions, data structures, and registers."
documentation = "https://docs.rs/vga"
keywords = ["vga", "no_std"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-osdev/vga"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
x86 = "0.52.0"
spin = "0.9.8"

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

[dependencies.num-traits]
version = "0.2.14"
default-features = false
