[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks=true

[profile.release]
overflow-checks=true

[dependencies]
spin = "0.9.4"
log = "0.4.17"

memory = { path = "../../crates/memory" }
boot_logger = { path = "../../crates/boot_logger" }
acpi = "4.1.1"

[dependencies.linked_list_allocator]
version = "0.9.1"
default-features = false
features = ["const_mut_refs"]
