[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks=true

[profile.release]
overflow-checks=true

[dependencies]
x86 = "0.52.0"
spin = "0.9.4"
log = "0.4.17"
acpi = "5.0.0"
tar-no-std = "0.2.0"

memory = { path = "../../crates/memory" }
boot_logger = { path = "../../crates/boot_logger" }

[dependencies.elf]
version = "0.7.2"
default-features = false


[dependencies.linked_list_allocator]
version = "0.10.5"
default-features = false
features = ["const_mut_refs"]
