[package]
name = "multiboot2-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
overflow-checks = true

[dependencies]
x86 = "0.52.0"
spin = "0.9.4"
log = "0.4.17"

acpi = { git = "https://github.com/rust-osdev/acpi.git" }

memory = { path = "../../crates/memory" }
initrd = { path = "../../crates/initrd" }
serial = { path = "../../crates/serial" }
boot_info = { path = "../../crates/boot_info" }
multi_core = { path = "../../crates/multi_core" }
boot_logger = { path = "../../crates/boot_logger" }
kernel_image = { path = "../../crates/kernel_image" }
kernel_cmdline = { path = "../../crates/kernel_cmdline" }
kernel_graphics = { path = "../../crates/kernel_graphics" }

[dependencies.elf]
version = "0.7.2"
default-features = false


[dependencies.linked_list_allocator]
version = "0.10.5"
default-features = false
