[package]
name = "uefi-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
acpi = "5.0.0"
x86 = "0.52.0"
spin = "0.9.4"

memory = { path = "../../crates/memory" }
initrd = { path = "../../crates/initrd" }
serial = { path = "../../crates/serial" }
boot_info = { path = "../../crates/boot_info" }
boot_acpi = { path = "../../crates/boot_acpi" }
boot_logger = { path = "../../crates/boot_logger" }
kernel_image = { path = "../../crates/kernel_image" }
kernel_cmdline = { path = "../../crates/kernel_cmdline" }

[dependencies.zeroize]
version = "1.7.0"
default-features = false

[dependencies.uefi]
version = "0.28.0"
features = ["alloc"]

[dependencies.linked_list_allocator]
version = "0.10.5"
default-features = false
